
  * checks/cruft{,.desc}:
    + [RA] Error on CMakeCache.txt files added or modified in the diff.
      Thanks, Joerg Jaspert.  (Closes: #510957)
    + [RA] Warn about .hgtags files in the diff and source.  Thanks,
      Holger Levsen and Chris Lamb.  (Closes: #464837)
    + [RA] Warn if the Debian diff or a non-native package is entirely
      empty.  (Closes: #498668)
  * checks/fields{,.desc}:
    + [ADB] Warn about an individual uploader appearing multiple times
      in Uploaders.  Thanks, Joerg Jaspert.  (Closes: #511536)
  * checks/lintian.desc:
    + [RA] Add tag description for malformed-changes-file.
  * checks/menus:
    + [RA] Recognize type as a way of checking for binaries, even though
      it's a bashism, so that we don't issue confusing duplicate tags for
      one same problem.  (Closes: #512119)
  * checks/nmu{,.desc}:
    + [RA] Suppress NMU warnings for packages with "local" in the version
      number or "local package" in the first line of the changelog.
      Thanks, Zack Weinberg.  (Closes: #501523)
  * checks/scripts{,.desc}:
    + [RA] Mention type as a bashism and recommend which or command -v.
    + [RA] Recognize type as a way of checking for binaries, even though
      it's a bashism, so that we don't issue confusing duplicate tags for
      one same problem.
  * checks/standards-version.desc:
    + [RA] Add a pointer to the debian-policy upgrading-checklist.txt.gz
      in out-of-date-standards-version and ancient-standards-version.

  * frontend/lintian:
    + [RA] Check that .changes files have at least a Format key.  If not,
      issue malformed-changes-file and skip them.  This catches .changes
      files that were PGP-signed twice.  (Closes: #315538)

  * t/runtests:
    + [RA] Add pre_upstream hook to modify the upstream source before
      generation of the .orig.tar.gz.

 -- Russ Allbery <rra@debian.org>  Sat, 10 Jan 2009 23:47:46 -0800

lintian (2.1.5) unstable; urgency=low

  * Summary of tag changes:
    + Added